--- a/css/index.css
+++ b/css/index.css
@@ -15080,6 +15080,8 @@ table tfoot td:last-child {
 }
 .logo img {
   margin-right: 10px;
+  width: 75px;
+  height: auto;
 }
 .logo .logo-text {
   font-family: var(--header_font);
