--- a/css/index.css
+++ b/css/index.css
@@ -15083,10 +15083,12 @@ table tfoot td:last-child {
   width: 75px;
   height: auto;
 }
-.logo .logo-text {
+.logo .logo-text,
+.logo .logo-text-header {
   font-family: var(--header_font);
 }
-.logo .logo-text span {
+.logo .logo-text span,
+.logo .logo-text-header span {
   display: block;
   color: #fff;
 }
@@ -15097,6 +15099,19 @@ table tfoot td:last-child {
   letter-spacing: -0.03em;
 }
 .logo .logo-text span:last-child {
+  padding-left: 5px;
+  font-size: 10px;
+  font-weight: bold;
+  letter-spacing: 0.25em;
+  line-height: 15px;
+}
+.logo .logo-text-header span:first-child {
+  font-size: 25px;
+  font-weight: 800;
+  line-height: 42px;
+  letter-spacing: -0.03em;
+}
+.logo .logo-text-header span:last-child {
   padding-left: 5px;
   font-size: 10px;
   font-weight: bold;
