--- a/css/index.css
+++ b/css/index.css
@@ -17987,9 +17987,11 @@ body.mfp-is-open .awp-player-popup {
 .text-section .text-section_video .text-img {
   position: relative;
   z-index: 1;
-  width: 80%;
+  width: 125%;
   max-width: 544px;
-  padding-right: 50px;
+  box-shadow: inset 0px -8px 6px -6px grey;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 .text-section .text-section_video .text-img-bg {
   position: absolute;
