--- a/css/index.css
+++ b/css/index.css
@@ -15627,7 +15627,7 @@ table tfoot td:last-child {
   }
 }
 .section-header {
-  max-width: 700px;
+  max-width: 800px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -19443,7 +19443,7 @@ body.mfp-is-open .awp-player-popup {
 }
 .tile-price-card .text p {
   margin-bottom: 0;
-  color: #fff;
+  color: var(--header_color_2);
 }
 .tile-price-card .price {
   min-width: 110px;
